[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-agent-tracker"
version = "0.1.0"
description = "Self-contained agent observability for OpenAI Agents SDK — run history, token usage, cost, latency, tool calls, and handoff traces."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.138.0",
    "jinja2>=3.1,<3.1.6",
    "openai-agents>=0.1.0",
    "uvicorn>=0.49.0",
]

[project.urls]
Homepage = "https://github.com/pranayjain29/OpenAI-Agents-SDK-Tracker"
Repository = "https://github.com/pranayjain29/OpenAI-Agents-SDK-Tracker.git"
